Prepare patch release 20260818 (#50173)
* Updated list of libraries to patch in patch-release.yml

* Reset sources for azure-ai-contentsafety to the release version 1.0.19.

* Prepare azure-ai-contentsafety for 1.0.20 patch release.

* Reset sources for azure-ai-documentintelligence to the release version 1.0.9.

* Prepare azure-ai-documentintelligence for 1.0.10 patch release.

* Reset sources for azure-ai-metricsadvisor to the release version 1.2.14.

* Prepare azure-ai-metricsadvisor for 1.2.15 patch release.

* Reset sources for azure-ai-textanalytics to the release version 5.5.14.

* Prepare azure-ai-textanalytics for 5.5.15 patch release.

* Reset sources for azure-ai-translation-document to the release version 2.0.0.

* Prepare azure-ai-translation-document for 2.0.1 patch release.

* Reset sources for azure-ai-translation-text to the release version 2.0.1.

* Prepare azure-ai-translation-text for 2.0.2 patch release.

* Reset sources for azure-ai-vision-imageanalysis to the release version 1.0.9.

* Prepare azure-ai-vision-imageanalysis for 1.0.10 patch release.

* Reset sources for azure-communication-callautomation to the release version 1.7.1.

* Prepare azure-communication-callautomation for 1.7.2 patch release.

* Reset sources for azure-communication-chat to the release version 1.6.7.

* Prepare azure-communication-chat for 1.6.8 patch release.

* Reset sources for azure-communication-common to the release version 1.4.7.

* Prepare azure-communication-common for 1.4.8 patch release.

* Reset sources for azure-communication-email to the release version 1.1.4.

* Prepare azure-communication-email for 1.1.5 patch release.

* Reset sources for azure-communication-identity to the release version 1.6.12.

* Prepare azure-communication-identity for 1.6.13 patch release.

* Reset sources for azure-communication-jobrouter to the release version 1.1.20.

* Prepare azure-communication-jobrouter for 1.1.21 patch release.

* Reset sources for azure-communication-me